--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,4 @@ spring.data.jpa.repositories.bootstrap-mode=default
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
